<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    tools:context="com.apps.rifki.latihan2.verify_account">

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen200"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_verify_account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen38" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:gravity="center"
            android:text="@string/txt_verify_account1"
            android:textColor="@color/colorGrey300" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen52"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:paddingBottom="@dimen/dimen18"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/edt_verification"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorGrey300" />

        <Button
            android:id="@+id/btn_send"
            style="@style/ButtonCustom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen26"
            android:text="@string/btn_send" />

        <TextView
            android:id="@+id/txtResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen20"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>