<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.rifki.latihan2.Daftar">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen17"
            app:titleTextColor="@color/colorWhite"
            android:background="@drawable/ic_header"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay" />

        <EditText
            android:id="@+id/edt_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:hint="@string/edt_username"
            android:inputType="textPersonName"
            android:paddingBottom="@dimen/dimen13"
            android:textSize="@dimen/font15" />

        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen2"
            android:layout_marginRight="@dimen/dimen26"
            android:hint="@string/edt_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/dimen13"
            android:textSize="@dimen/font15" />

        <EditText
            android:id="@+id/edt_phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen2"
            android:layout_marginRight="@dimen/dimen26"
            android:hint="@string/edt_phone"
            android:inputType="phone"
            android:paddingBottom="@dimen/dimen13"
            android:textSize="@dimen/font15" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <RadioButton
            android:id="@+id/rad_btn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen40"
            android:layout_marginLeft="@dimen/dimen40"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_weight="1"
            android:paddingStart="@dimen/dimen15"
            android:paddingLeft="@dimen/dimen15"
            android:paddingEnd="@dimen/dimen1"
            android:paddingRight="@dimen/dimen1"
            android:text="@string/gender_male"
            android:textColor="@color/colorGrey500"
            android:textSize="@dimen/font16" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen40"
            android:layout_marginLeft="@dimen/dimen40"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginEnd="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:layout_weight="1"
            android:paddingStart="@dimen/dimen15"
            android:paddingLeft="@dimen/dimen15"
            android:paddingEnd="@dimen/dimen1"
            android:paddingRight="@dimen/dimen1"
            android:text="@string/gender_female"
            android:textColor="@color/colorGrey500"
            android:textSize="@dimen/font16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Spinner
            android:id="@+id/spin_blood"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginEnd="@dimen/dimen50"
            android:layout_marginRight="@dimen/dimen50"
            android:layout_weight="0.9"
            android:entries="@array/array_blood" />

        <Spinner
            android:id="@+id/spin_resus"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginEnd="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:layout_weight="1"
            android:entries="@array/array_rhesus"
            android:paddingStart="@dimen/dimen1"
            android:paddingLeft="@dimen/dimen1"
            android:paddingEnd="@dimen/dimen50"
            android:paddingRight="@dimen/dimen50" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/edt_password_register"
            android:hint="@string/edt_password"
            android:textSize="@dimen/font15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_marginRight="@dimen/dimen26"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/dimen13" />

        <EditText
            android:id="@+id/edt_repassword_register"
            android:hint="@string/edt_repassword"
            android:textSize="@dimen/font15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen2"
            android:layout_marginRight="@dimen/dimen26"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/dimen13" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <RadioButton
            android:id="@+id/rad_btn_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen11"
            android:layout_weight="1"
            android:paddingStart="@dimen/dimen20"
            android:paddingLeft="@dimen/dimen20"
            android:paddingEnd="@dimen/dimen1"
            android:paddingRight="@dimen/dimen1"
            android:text="@string/edt_personal"
            android:textColor="@color/colorGrey500"
            android:textSize="@dimen/font16" />

        <RadioButton
            android:id="@+id/rad_btn_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen11"
            android:layout_marginEnd="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:layout_weight="0.5"
            android:paddingStart="@dimen/dimen20"
            android:paddingLeft="@dimen/dimen20"
            android:paddingEnd="@dimen/dimen1"
            android:paddingRight="@dimen/dimen1"
            android:text="@string/edt_organization"
            android:textColor="@color/colorGrey500"
            android:textSize="@dimen/font16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Spinner
            android:id="@+id/edt_job_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_job"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen2"
            android:layout_marginRight="@dimen/dimen26"
            android:paddingBottom="@dimen/dimen13"
            android:textSize="@dimen/font15"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <EditText
            android:id="@+id/edt_address_register"
            android:hint="@string/edt_address"
            android:textSize="@dimen/font15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen2"
            android:layout_marginRight="@dimen/dimen26"
            android:inputType="textPersonName"
            android:paddingBottom="@dimen/dimen13" />

        <EditText
            android:id="@+id/edt_location_register"
            android:hint="@string/edt_location"
            android:textSize="@dimen/font15"
            android:drawableEnd="@drawable/ic_blood_needed_location"
            android:drawableRight="@drawable/ic_blood_needed_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen2"
            android:layout_marginRight="@dimen/dimen26"
            android:inputType="textPersonName"
            android:paddingBottom="@dimen/dimen10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <CheckBox
            android:id="@+id/check_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:paddingStart="@dimen/dimen25"
            android:paddingLeft="@dimen/dimen25"
            android:paddingEnd="@dimen/dimen1"
            android:paddingRight="@dimen/dimen1"
            android:text="@string/check_agrrement"
            android:textColor="@color/colorGrey500" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="409dp"
        android:layout_height="71dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonCustom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_marginRight="@dimen/dimen26"
            android:text="@string/edt_daftar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>